--- a/GP1 JOSHUAPURVES -ABCXYZ/GP1 JOSHUAPURVES -ABCXYZ.vcxproj.filters
+++ b/GP1 JOSHUAPURVES -ABCXYZ/GP1 JOSHUAPURVES -ABCXYZ.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClInclude Include="abcxyzGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cButton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cButtonMgr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cBkGround.cpp">
@@ -104,5 +110,16 @@
     <ClCompile Include="ABCXYZSDL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cButton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cButtonMgr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Images\ball.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
