--- a/GP1 JOSHUAPURVES -ABCXYZ/GP1 JOSHUAPURVES -ABCXYZ.vcxproj.filters
+++ b/GP1 JOSHUAPURVES -ABCXYZ/GP1 JOSHUAPURVES -ABCXYZ.vcxproj.filters
@@ -66,6 +66,15 @@
     <ClInclude Include="cButtonMgr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cFileHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cFileSave.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cBkGround.cpp">
@@ -114,6 +123,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cButtonMgr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cFileHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cTimer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
